--- a/thoikhoabieu.html
+++ b/thoikhoabieu.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <style>
         table {
+            table-layout: fixed;
             width: 50%;
             border-collapse: collapse;
         }
