--- a/bangdiem.html
+++ b/bangdiem.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-    <table style="width:80%">
-        <tr>
+    <table style="width:70%">
+        <tr style="background-color: yellow ;">
             <th rowspan="2">STT</th>
             <th rowspan="2">Họ và Tên</th>
             <th rowspan="2">Học kỳ</th>
@@ -27,16 +27,16 @@
             <th colspan="3">Văn</th>
             <th colspan="3">Anh</th>
         </tr>
-        <tr>
-            <td>15p</td>
-            <td>45p</td>
-            <td>Tổng</td>
-            <td>15p</td>
-            <td>45p</td>
-            <td>Tổng</td>
-            <td>15p</td>
-            <td>45p</td>
-            <td>Tổng</td>
+        <tr style="background-color: yellow;">
+            <th>15p</th>
+            <th>45p</th>
+            <th>Tổng</th>
+            <th>15p</th>
+            <th>45p</th>
+            <th>Tổng</th>
+            <th>15p</th>
+            <th>45p</th>
+            <th>Tổng</th>
         </tr>
         <tr>
             <td rowspan="4">1</td>
@@ -86,6 +86,16 @@
             <td>8</td>
             <td>16</td>
         </tr>
+        <tr style="background-color: yellow;">
+            <td colspan="3"> <b>Tổng TB</b> </td>
+            <td colspan="2"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td></td>
+        </tr>
+
         <tr>
             <td rowspan="4">2</td>
             <td rowspan="4">Hoàng</td>
@@ -134,13 +144,13 @@
             <td>8</td>
             <td>16</td>
         </tr>
-        <tr>
+        <tr style="background-color: yellow;">
             <td colspan="3"> <b>Tổng TB</b> </td>
-            <td colspan="2"><b>Toán</b> </td>
+            <td colspan="2"></td>
             <td></td>
-            <td colspan="2"><b>Văn</b></td>
+            <td colspan="2"></td>
             <td></td>
-            <td colspan="2"><b>Anh</b></td>
+            <td colspan="2"></td>
             <td></td>
         </tr>
 
