--- a/sothich.html
+++ b/sothich.html
@@ -18,56 +18,58 @@
 
 <body>
     <fieldset>
-        <table>
-            <th colspan="4" style="background-color: orange ;">SỞ THÍCH CỦA BẠN</th>
-            <tr>
-                <td><label for="name" style="color: blue ;">Họ và tên</label></td>
-                <td colspan="3"><input type="text" name="name" size="30"></td>
-            </tr>
-            <tr>
-                <td><label for="email" style="color: blue;">Email</label></td>
-                <td colspan="2"><input type="email" name="email" size="25"><br></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td><label for="favorite" style="color: blue;">Sở thích</label></td>
-                <td><input type="checkbox" name="favorite" value="Thethao">
-                    <label style="color: orange ;">Thể thao</label>
-                </td>
-                <td><input type="checkbox" name="favorite" value="Amnhac">
-                    <label style="color: orange ;">Âm nhạc</label>
-                </td>
-                <td><input type="checkbox" name="favorite" value="Docsach">
-                    <label style="color: orange ;">Đọc sách</label>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td><input type="checkbox" name="favorite" value="Luotweb">
-                    <label style="color: orange ;">Lướt web</label>
-                </td>
-                <td><input type="checkbox" name="favorite" value="Choigame">
-                    <label style="color: orange ;">Chơi game</label>
-                </td>
-                <td><input type="checkbox" name="favorite" value="Dienanh">
-                    <label style="color: orange ;">Điện ảnh</label>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td><input type="checkbox" name="favorite" value="Dulich">
-                    <label style="color: orange ;">Du lịch</label>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="Submit">
-                </td>
-                <td><input type="reset" value="Reset">
-                </td>
-            </tr>
-        </table>
+        <form action="">
+            <table>
+                <th colspan="4" style="background-color: orange ;">SỞ THÍCH CỦA BẠN</th>
+                <tr>
+                    <td><label for="name" style="color: blue ;">Họ và tên</label></td>
+                    <td colspan="3"><input type="text" name="name" size="30"></td>
+                </tr>
+                <tr>
+                    <td><label for="email" style="color: blue;">Email</label></td>
+                    <td colspan="2"><input type="email" name="email" size="25"><br></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><label for="favorite" style="color: blue;">Sở thích</label></td>
+                    <td><input type="checkbox" name="favorite" value="Thethao">
+                        <label style="color: orange ;">Thể thao</label>
+                    </td>
+                    <td><input type="checkbox" name="favorite" value="Amnhac">
+                        <label style="color: orange ;">Âm nhạc</label>
+                    </td>
+                    <td><input type="checkbox" name="favorite" value="Docsach">
+                        <label style="color: orange ;">Đọc sách</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="checkbox" name="favorite" value="Luotweb">
+                        <label style="color: orange ;">Lướt web</label>
+                    </td>
+                    <td><input type="checkbox" name="favorite" value="Choigame">
+                        <label style="color: orange ;">Chơi game</label>
+                    </td>
+                    <td><input type="checkbox" name="favorite" value="Dienanh">
+                        <label style="color: orange ;">Điện ảnh</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="checkbox" name="favorite" value="Dulich">
+                        <label style="color: orange ;">Du lịch</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <input type="submit" value="Gửi thông tin">
+                    </td>
+                    <td><input type="reset" value="Nhập lại">
+                    </td>
+                </tr>
+            </table>
+        </form>
     </fieldset>
 </body>
 
