--- a/dangky.html
+++ b/dangky.html
@@ -9,13 +9,13 @@
     <style>
         fieldset {
             background-color: bisque;
-            width: 40%;
+            width: 20%;
             border: hidden;
         }
 
         th {
             font-family: Tahoma;
-            text-align: left;
+            text-align: center;
             color: blue;
         }
     </style>
@@ -41,7 +41,7 @@
                 <tr>
                     <td style="color: blue;><label for=" gender">Giới tính</label></td>
                     <td>
-                        <input type="radio" name="gender" value="Male">
+                        <input type="radio" name="gender" value="Male" checked>
                         <label>Nam</label>
                     </td>
                     <td>
