--- a/WebvsTable.html
+++ b/WebvsTable.html
@@ -7,50 +7,55 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table {
+        th {
+            background-color: rgb(251, 214, 238);
+        }
+
+        td {
             text-align: center;
-            width: 100%;
-            height: 100%;
+            height: 100px;
         }
     </style>
 </head>
 
 <body>
-    <table border="1">
+    <table border="1" width="100%">
+        <thead>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </thead>
         <tr>
-            <td colspan="4">1</td>
-            <td colspan="8">2</td>
-        </tr>
-        <tr>
-            <td colspan="12">3</td>
+            <td colspan="4" style="background-color:#f44336">1</td>
+            <td colspan="8" style="background-color:yellow">2</td>
         </tr>
 
         <tr>
-            <td colspan="4" rowspan="8">4</td>
-            <td colspan="6" rowspan="4">5</td>
-            <td colspan="2" rowspan="8">7</td>
+            <td colspan="12" style="background-color:#26a69a">3</td>
+        </tr>
+
+        <tr>
+            <td colspan="4" rowspan="2" style="background-color:#039be5">4</td>
+            <td colspan="6" style="background-color:#f06292">5</td>
+            <td colspan="2" rowspan="2" style="background-color:#76ff03">7</td>
         </tr>
         <tr>
-            <td colspan="6" rowspan="4">6</td>
+            <td colspan="6" style="background-color:#ab47bc">6</td>
         </tr>
+
         <tr>
-            <td colspan="8" rowspan="2">8</td>
-            <td colspan="4" rowspan="2">9</td>
+            <td colspan="8" style="background-color:  #ffe082">8</td>
+            <td colspan="4" style="background-color:#33691e">9</td>
         </tr>
-        <!-- <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr> -->
     </table>
 </body>
 
